messaging_app/blue_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-django-service
spec:
  type: ClusterIP
  selector:
    app: messaging-app-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-app
  template:
    metadata:
      labels:
        app: messaging-app
    spec:
      volumes:
        - name: staticfiles
      containers:
      - name: messaging-app
        image: messaging_app-web
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8001
